export const snapshot = {};

snapshot[`generateAwsExtensionModel - all handlers, natural name 1`] = `
'// Swamp, an Automation Framework
// Copyright (C) 2026 Elder Swamp Club, Inc.
//
// This file is part of Swamp.
//
// Swamp is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License version 3
// as published by the Free Software Foundation, with the Swamp
// Extension and Definition Exception (found in the "COPYING-EXCEPTION"
// file).
//
// Swamp is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with Swamp.  If not, see <https://www.gnu.org/licenses/>.

// Auto-generated extension model for @swamp/aws/s3/bucket
// Do not edit manually. Re-generate with: deno task generate:aws

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for S3 Bucket (AWS::S3::Bucket).
 *
 * Wraps the CloudFormation resource type as a swamp model so create,
 * get, update, delete, sync, and list can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { isResourceNotFoundError, readResource, createResource, updateResource, deleteResource } from "./_lib/aws.ts";
import type { AwsCredentials } from "./_lib/aws.ts";

const GlobalArgsSchema = z.object({
  accessKeyId: z.string().meta({ sensitive: true }).describe("AWS access key ID; overrides AWS_ACCESS_KEY_ID environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).describe("AWS secret access key; overrides AWS_SECRET_ACCESS_KEY environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  sessionToken: z.string().meta({ sensitive: true }).describe("AWS session token for temporary credentials; overrides AWS_SESSION_TOKEN environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  region: z.string().describe("AWS region; overrides AWS_REGION / AWS_DEFAULT_REGION environment variables and ~/.aws/config profile region. Defaults to us-east-1.").optional(),
  BucketName: z.string().describe("The name of the S3 bucket"),
});

const StateSchema = z.object({
  BucketName: z.string().optional(),
  Arn: z.string().optional(),
}).passthrough();

type StateData = z.infer<typeof StateSchema>;

const InputsSchema = z.object({
  accessKeyId: z.string().meta({ sensitive: true }).optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).optional(),
  sessionToken: z.string().meta({ sensitive: true }).optional(),
  region: z.string().optional(),
  BucketName: z.string().describe("The name of the S3 bucket").optional(),
});

const _credentialKeys = new Set(["accessKeyId","secretAccessKey","sessionToken","region"]);

function _buildCredentials(g: Record<string, unknown>): AwsCredentials {
  return {
    accessKeyId: g.accessKeyId as string | undefined,
    secretAccessKey: g.secretAccessKey as string | undefined,
    sessionToken: g.sessionToken as string | undefined,
    region: g.region as string | undefined,
  };
}

/** Swamp extension model for S3 Bucket. Registered at \`@swamp/aws/s3/bucket\`. */
export const model = {
  type: "@swamp/aws/s3/bucket",
  version: "2026.01.01.1",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "S3 Bucket resource state",
      schema: StateSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a S3 Bucket",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const desiredState: Record<string, unknown> = {};
        for (const [key, value] of Object.entries(g)) {
          if (_credentialKeys.has(key)) continue;
          if (value !== undefined) desiredState[key] = value;
        }
        const result = await createResource("AWS::S3::Bucket", desiredState, credentials) as StateData;
        const instanceName = ((result.BucketName ?? g.BucketName)?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a S3 Bucket",
      arguments: z.object({ identifier: z.string().describe("The primary identifier of the S3 Bucket") }),
      execute: async (args: { identifier: string }, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const result = await readResource("AWS::S3::Bucket", args.identifier, credentials) as StateData;
        const instanceName = ((result.BucketName ?? context.globalArgs.BucketName)?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: "Update a S3 Bucket",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const instanceName = (g.BucketName?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const identifier = existing.BucketName?.toString();
        if (!identifier) throw new Error("No identifier found in existing state");
        const currentState = await readResource("AWS::S3::Bucket", identifier, credentials) as StateData;
        const desiredState: Record<string, unknown> = { ...currentState };
        for (const [key, value] of Object.entries(g)) {
          if (_credentialKeys.has(key)) continue;
          if (value !== undefined) desiredState[key] = value;
        }
        const result = await updateResource("AWS::S3::Bucket", identifier, currentState, desiredState, undefined, credentials);
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: "Delete a S3 Bucket",
      arguments: z.object({ identifier: z.string().describe("The primary identifier of the S3 Bucket") }),
      execute: async (args: { identifier: string }, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const { existed } = await deleteResource("AWS::S3::Bucket", args.identifier, credentials);
        const instanceName = (context.globalArgs.BucketName?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, {
          identifier: args.identifier,
          existed,
          status: existed ? "deleted" : "not_found",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync S3 Bucket state from AWS",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const instanceName = (g.BucketName?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const identifier = existing.BucketName?.toString();
        if (!identifier) throw new Error("No identifier found in existing state");
        try {
          const result = await readResource("AWS::S3::Bucket", identifier, credentials) as StateData;
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        } catch (error: unknown) {
          if (isResourceNotFoundError(error)) {
            const handle = await context.writeResource("state", instanceName, {
              identifier,
              status: "not_found",
              syncedAt: new Date().toISOString(),
            });
            return { dataHandles: [handle] };
          }
          throw error;
        }
      },
    },
  },
};
'
`;

snapshot[`generateAwsExtensionModel - synthetic name 1`] = `
'// Swamp, an Automation Framework
// Copyright (C) 2026 Elder Swamp Club, Inc.
//
// This file is part of Swamp.
//
// Swamp is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License version 3
// as published by the Free Software Foundation, with the Swamp
// Extension and Definition Exception (found in the "COPYING-EXCEPTION"
// file).
//
// Swamp is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with Swamp.  If not, see <https://www.gnu.org/licenses/>.

// Auto-generated extension model for @swamp/aws/iam/role
// Do not edit manually. Re-generate with: deno task generate:aws

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for IAM Role (AWS::IAM::Role).
 *
 * Wraps the CloudFormation resource type as a swamp model so create,
 * get, update, delete, sync, and list can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { isResourceNotFoundError, readResource, createResource, updateResource, deleteResource } from "./_lib/aws.ts";
import type { AwsCredentials } from "./_lib/aws.ts";

const GlobalArgsSchema = z.object({
  name: z.string().describe("Instance name for this resource (used as the unique identifier in the factory pattern)"),
  accessKeyId: z.string().meta({ sensitive: true }).describe("AWS access key ID; overrides AWS_ACCESS_KEY_ID environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).describe("AWS secret access key; overrides AWS_SECRET_ACCESS_KEY environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  sessionToken: z.string().meta({ sensitive: true }).describe("AWS session token for temporary credentials; overrides AWS_SESSION_TOKEN environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  region: z.string().describe("AWS region; overrides AWS_REGION / AWS_DEFAULT_REGION environment variables and ~/.aws/config profile region. Defaults to us-east-1.").optional(),
  RoleName: z.string().describe("The name of the IAM role"),
  AssumeRolePolicyDocument: z.record(z.string(), z.unknown()).describe("The trust policy"),
});

const StateSchema = z.object({
  RoleName: z.string().optional(),
  Arn: z.string().optional(),
  RoleId: z.string().optional(),
}).passthrough();

type StateData = z.infer<typeof StateSchema>;

const InputsSchema = z.object({
  name: z.string().optional(),
  accessKeyId: z.string().meta({ sensitive: true }).optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).optional(),
  sessionToken: z.string().meta({ sensitive: true }).optional(),
  region: z.string().optional(),
  RoleName: z.string().describe("The name of the IAM role").optional(),
  AssumeRolePolicyDocument: z.record(z.string(), z.unknown()).describe("The trust policy").optional(),
});

const _credentialKeys = new Set(["accessKeyId","secretAccessKey","sessionToken","region"]);

function _buildCredentials(g: Record<string, unknown>): AwsCredentials {
  return {
    accessKeyId: g.accessKeyId as string | undefined,
    secretAccessKey: g.secretAccessKey as string | undefined,
    sessionToken: g.sessionToken as string | undefined,
    region: g.region as string | undefined,
  };
}

/** Swamp extension model for IAM Role. Registered at \`@swamp/aws/iam/role\`. */
export const model = {
  type: "@swamp/aws/iam/role",
  version: "2026.01.01.1",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "IAM Role resource state",
      schema: StateSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a IAM Role",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const desiredState: Record<string, unknown> = {};
        for (const [key, value] of Object.entries(g)) {
          if (key === "name") continue;
          if (_credentialKeys.has(key)) continue;
          if (value !== undefined) desiredState[key] = value;
        }
        const result = await createResource("AWS::IAM::Role", desiredState, credentials) as StateData;
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a IAM Role",
      arguments: z.object({ identifier: z.string().describe("The primary identifier of the IAM Role") }),
      execute: async (args: { identifier: string }, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const result = await readResource("AWS::IAM::Role", args.identifier, credentials) as StateData;
        const instanceName = (context.globalArgs.name?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: "Update a IAM Role",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const identifier = existing.Arn?.toString();
        if (!identifier) throw new Error("No identifier found in existing state");
        const currentState = await readResource("AWS::IAM::Role", identifier, credentials) as StateData;
        const desiredState: Record<string, unknown> = { ...currentState };
        for (const [key, value] of Object.entries(g)) {
          if (key === "name") continue;
          if (_credentialKeys.has(key)) continue;
          if (value !== undefined) desiredState[key] = value;
        }
        const result = await updateResource("AWS::IAM::Role", identifier, currentState, desiredState, undefined, credentials);
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: "Delete a IAM Role",
      arguments: z.object({ identifier: z.string().describe("The primary identifier of the IAM Role") }),
      execute: async (args: { identifier: string }, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const { existed } = await deleteResource("AWS::IAM::Role", args.identifier, credentials);
        const instanceName = (context.globalArgs.name?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, {
          identifier: args.identifier,
          existed,
          status: existed ? "deleted" : "not_found",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync IAM Role state from AWS",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const identifier = existing.Arn?.toString();
        if (!identifier) throw new Error("No identifier found in existing state");
        try {
          const result = await readResource("AWS::IAM::Role", identifier, credentials) as StateData;
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        } catch (error: unknown) {
          if (isResourceNotFoundError(error)) {
            const handle = await context.writeResource("state", instanceName, {
              identifier,
              status: "not_found",
              syncedAt: new Date().toISOString(),
            });
            return { dataHandles: [handle] };
          }
          throw error;
        }
      },
    },
  },
};
'
`;

snapshot[`generateAwsExtensionModel - composite primary identifier 1`] = `
'// Swamp, an Automation Framework
// Copyright (C) 2026 Elder Swamp Club, Inc.
//
// This file is part of Swamp.
//
// Swamp is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License version 3
// as published by the Free Software Foundation, with the Swamp
// Extension and Definition Exception (found in the "COPYING-EXCEPTION"
// file).
//
// Swamp is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with Swamp.  If not, see <https://www.gnu.org/licenses/>.

// Auto-generated extension model for @swamp/aws/ec2/subnet_route_table_association
// Do not edit manually. Re-generate with: deno task generate:aws

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for EC2 SubnetRouteTableAssociation (AWS::EC2::SubnetRouteTableAssociation).
 *
 * Wraps the CloudFormation resource type as a swamp model so create,
 * get, update, delete, sync, and list can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { isResourceNotFoundError, readResource, createResource, updateResource, deleteResource } from "./_lib/aws.ts";
import type { AwsCredentials } from "./_lib/aws.ts";

const GlobalArgsSchema = z.object({
  name: z.string().describe("Instance name for this resource (used as the unique identifier in the factory pattern)"),
  accessKeyId: z.string().meta({ sensitive: true }).describe("AWS access key ID; overrides AWS_ACCESS_KEY_ID environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).describe("AWS secret access key; overrides AWS_SECRET_ACCESS_KEY environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  sessionToken: z.string().meta({ sensitive: true }).describe("AWS session token for temporary credentials; overrides AWS_SESSION_TOKEN environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  region: z.string().describe("AWS region; overrides AWS_REGION / AWS_DEFAULT_REGION environment variables and ~/.aws/config profile region. Defaults to us-east-1.").optional(),
  SubnetId: z.string().describe("The subnet ID"),
  RouteTableId: z.string().describe("The route table ID"),
});

const StateSchema = z.object({
  SubnetId: z.string().optional(),
  RouteTableId: z.string().optional(),
  Id: z.string().optional(),
}).passthrough();

type StateData = z.infer<typeof StateSchema>;

const InputsSchema = z.object({
  name: z.string().optional(),
  accessKeyId: z.string().meta({ sensitive: true }).optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).optional(),
  sessionToken: z.string().meta({ sensitive: true }).optional(),
  region: z.string().optional(),
  SubnetId: z.string().describe("The subnet ID").optional(),
  RouteTableId: z.string().describe("The route table ID").optional(),
});

const _credentialKeys = new Set(["accessKeyId","secretAccessKey","sessionToken","region"]);

function _buildCredentials(g: Record<string, unknown>): AwsCredentials {
  return {
    accessKeyId: g.accessKeyId as string | undefined,
    secretAccessKey: g.secretAccessKey as string | undefined,
    sessionToken: g.sessionToken as string | undefined,
    region: g.region as string | undefined,
  };
}

/** Swamp extension model for EC2 SubnetRouteTableAssociation. Registered at \`@swamp/aws/ec2/subnet_route_table_association\`. */
export const model = {
  type: "@swamp/aws/ec2/subnet_route_table_association",
  version: "2026.01.01.1",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "EC2 SubnetRouteTableAssociation resource state",
      schema: StateSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a EC2 SubnetRouteTableAssociation",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const desiredState: Record<string, unknown> = {};
        for (const [key, value] of Object.entries(g)) {
          if (key === "name") continue;
          if (_credentialKeys.has(key)) continue;
          if (value !== undefined) desiredState[key] = value;
        }
        const result = await createResource("AWS::EC2::SubnetRouteTableAssociation", desiredState, credentials) as StateData;
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a EC2 SubnetRouteTableAssociation",
      arguments: z.object({ identifier: z.string().describe("The primary identifier of the EC2 SubnetRouteTableAssociation") }),
      execute: async (args: { identifier: string }, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const result = await readResource("AWS::EC2::SubnetRouteTableAssociation", args.identifier, credentials) as StateData;
        const instanceName = (context.globalArgs.name?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: "Update a EC2 SubnetRouteTableAssociation",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const idParts = [existing.SubnetId?.toString(), existing.RouteTableId?.toString()];
        if (idParts.some((p) => !p)) throw new Error("Missing primary identifier fields in existing state");
        const identifier = idParts.join("|");
        const currentState = await readResource("AWS::EC2::SubnetRouteTableAssociation", identifier, credentials) as StateData;
        const desiredState: Record<string, unknown> = { ...currentState };
        for (const [key, value] of Object.entries(g)) {
          if (key === "name") continue;
          if (_credentialKeys.has(key)) continue;
          if (value !== undefined) desiredState[key] = value;
        }
        const result = await updateResource("AWS::EC2::SubnetRouteTableAssociation", identifier, currentState, desiredState, ["SubnetId"], credentials);
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: "Delete a EC2 SubnetRouteTableAssociation",
      arguments: z.object({ identifier: z.string().describe("The primary identifier of the EC2 SubnetRouteTableAssociation") }),
      execute: async (args: { identifier: string }, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const { existed } = await deleteResource("AWS::EC2::SubnetRouteTableAssociation", args.identifier, credentials);
        const instanceName = (context.globalArgs.name?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, {
          identifier: args.identifier,
          existed,
          status: existed ? "deleted" : "not_found",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync EC2 SubnetRouteTableAssociation state from AWS",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const idParts = [existing.SubnetId?.toString(), existing.RouteTableId?.toString()];
        if (idParts.some((p) => !p)) throw new Error("Missing primary identifier fields in existing state");
        const identifier = idParts.join("|");
        try {
          const result = await readResource("AWS::EC2::SubnetRouteTableAssociation", identifier, credentials) as StateData;
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        } catch (error: unknown) {
          if (isResourceNotFoundError(error)) {
            const handle = await context.writeResource("state", instanceName, {
              identifier,
              status: "not_found",
              syncedAt: new Date().toISOString(),
            });
            return { dataHandles: [handle] };
          }
          throw error;
        }
      },
    },
  },
};
'
`;

snapshot[`generateAwsExtensionModel - createOnly properties filtered in update 1`] = `
'// Swamp, an Automation Framework
// Copyright (C) 2026 Elder Swamp Club, Inc.
//
// This file is part of Swamp.
//
// Swamp is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License version 3
// as published by the Free Software Foundation, with the Swamp
// Extension and Definition Exception (found in the "COPYING-EXCEPTION"
// file).
//
// Swamp is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with Swamp.  If not, see <https://www.gnu.org/licenses/>.

// Auto-generated extension model for @swamp/aws/ec2/instance
// Do not edit manually. Re-generate with: deno task generate:aws

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for EC2 Instance (AWS::EC2::Instance).
 *
 * Wraps the CloudFormation resource type as a swamp model so create,
 * get, update, delete, sync, and list can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { isResourceNotFoundError, readResource, createResource, updateResource, deleteResource } from "./_lib/aws.ts";
import type { AwsCredentials } from "./_lib/aws.ts";

const GlobalArgsSchema = z.object({
  name: z.string().describe("Instance name for this resource (used as the unique identifier in the factory pattern)"),
  accessKeyId: z.string().meta({ sensitive: true }).describe("AWS access key ID; overrides AWS_ACCESS_KEY_ID environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).describe("AWS secret access key; overrides AWS_SECRET_ACCESS_KEY environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  sessionToken: z.string().meta({ sensitive: true }).describe("AWS session token for temporary credentials; overrides AWS_SESSION_TOKEN environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  region: z.string().describe("AWS region; overrides AWS_REGION / AWS_DEFAULT_REGION environment variables and ~/.aws/config profile region. Defaults to us-east-1.").optional(),
  InstanceType: z.string().describe("The instance type"),
  ImageId: z.string().describe("The AMI ID"),
});

const StateSchema = z.object({
  InstanceId: z.string().optional(),
  InstanceType: z.string().optional(),
  ImageId: z.string().optional(),
}).passthrough();

type StateData = z.infer<typeof StateSchema>;

const InputsSchema = z.object({
  name: z.string().optional(),
  accessKeyId: z.string().meta({ sensitive: true }).optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).optional(),
  sessionToken: z.string().meta({ sensitive: true }).optional(),
  region: z.string().optional(),
  InstanceType: z.string().describe("The instance type").optional(),
  ImageId: z.string().describe("The AMI ID").optional(),
});

const _credentialKeys = new Set(["accessKeyId","secretAccessKey","sessionToken","region"]);

function _buildCredentials(g: Record<string, unknown>): AwsCredentials {
  return {
    accessKeyId: g.accessKeyId as string | undefined,
    secretAccessKey: g.secretAccessKey as string | undefined,
    sessionToken: g.sessionToken as string | undefined,
    region: g.region as string | undefined,
  };
}

/** Swamp extension model for EC2 Instance. Registered at \`@swamp/aws/ec2/instance\`. */
export const model = {
  type: "@swamp/aws/ec2/instance",
  version: "2026.01.01.1",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "EC2 Instance resource state",
      schema: StateSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a EC2 Instance",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const desiredState: Record<string, unknown> = {};
        for (const [key, value] of Object.entries(g)) {
          if (key === "name") continue;
          if (_credentialKeys.has(key)) continue;
          if (value !== undefined) desiredState[key] = value;
        }
        const result = await createResource("AWS::EC2::Instance", desiredState, credentials) as StateData;
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a EC2 Instance",
      arguments: z.object({ identifier: z.string().describe("The primary identifier of the EC2 Instance") }),
      execute: async (args: { identifier: string }, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const result = await readResource("AWS::EC2::Instance", args.identifier, credentials) as StateData;
        const instanceName = (context.globalArgs.name?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: "Update a EC2 Instance",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const identifier = existing.InstanceId?.toString();
        if (!identifier) throw new Error("No identifier found in existing state");
        const currentState = await readResource("AWS::EC2::Instance", identifier, credentials) as StateData;
        const desiredState: Record<string, unknown> = { ...currentState };
        for (const [key, value] of Object.entries(g)) {
          if (key === "name") continue;
          if (_credentialKeys.has(key)) continue;
          if (value !== undefined) desiredState[key] = value;
        }
        const result = await updateResource("AWS::EC2::Instance", identifier, currentState, desiredState, ["ImageId"], credentials);
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: "Delete a EC2 Instance",
      arguments: z.object({ identifier: z.string().describe("The primary identifier of the EC2 Instance") }),
      execute: async (args: { identifier: string }, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const { existed } = await deleteResource("AWS::EC2::Instance", args.identifier, credentials);
        const instanceName = (context.globalArgs.name?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, {
          identifier: args.identifier,
          existed,
          status: existed ? "deleted" : "not_found",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync EC2 Instance state from AWS",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const identifier = existing.InstanceId?.toString();
        if (!identifier) throw new Error("No identifier found in existing state");
        try {
          const result = await readResource("AWS::EC2::Instance", identifier, credentials) as StateData;
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        } catch (error: unknown) {
          if (isResourceNotFoundError(error)) {
            const handle = await context.writeResource("state", instanceName, {
              identifier,
              status: "not_found",
              syncedAt: new Date().toISOString(),
            });
            return { dataHandles: [handle] };
          }
          throw error;
        }
      },
    },
  },
};
'
`;

snapshot[`generateAwsExtensionModel - read-only resource (no update, no delete) 1`] = `
'// Swamp, an Automation Framework
// Copyright (C) 2026 Elder Swamp Club, Inc.
//
// This file is part of Swamp.
//
// Swamp is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License version 3
// as published by the Free Software Foundation, with the Swamp
// Extension and Definition Exception (found in the "COPYING-EXCEPTION"
// file).
//
// Swamp is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with Swamp.  If not, see <https://www.gnu.org/licenses/>.

// Auto-generated extension model for @swamp/aws/cloudformation/stack_set
// Do not edit manually. Re-generate with: deno task generate:aws

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for CloudFormation StackSet (AWS::CloudFormation::StackSet).
 *
 * Wraps the CloudFormation resource type as a swamp model so create,
 * get, update, delete, sync, and list can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { isResourceNotFoundError, readResource, createResource } from "./_lib/aws.ts";
import type { AwsCredentials } from "./_lib/aws.ts";

const GlobalArgsSchema = z.object({
  name: z.string().describe("Instance name for this resource (used as the unique identifier in the factory pattern)"),
  accessKeyId: z.string().meta({ sensitive: true }).describe("AWS access key ID; overrides AWS_ACCESS_KEY_ID environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).describe("AWS secret access key; overrides AWS_SECRET_ACCESS_KEY environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  sessionToken: z.string().meta({ sensitive: true }).describe("AWS session token for temporary credentials; overrides AWS_SESSION_TOKEN environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  region: z.string().describe("AWS region; overrides AWS_REGION / AWS_DEFAULT_REGION environment variables and ~/.aws/config profile region. Defaults to us-east-1.").optional(),
  StackSetName: z.string().describe("The name of the stack set"),
});

const StateSchema = z.object({
  StackSetName: z.string().optional(),
  StackSetId: z.string().optional(),
}).passthrough();

type StateData = z.infer<typeof StateSchema>;

const InputsSchema = z.object({
  name: z.string().optional(),
  accessKeyId: z.string().meta({ sensitive: true }).optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).optional(),
  sessionToken: z.string().meta({ sensitive: true }).optional(),
  region: z.string().optional(),
  StackSetName: z.string().describe("The name of the stack set").optional(),
});

const _credentialKeys = new Set(["accessKeyId","secretAccessKey","sessionToken","region"]);

function _buildCredentials(g: Record<string, unknown>): AwsCredentials {
  return {
    accessKeyId: g.accessKeyId as string | undefined,
    secretAccessKey: g.secretAccessKey as string | undefined,
    sessionToken: g.sessionToken as string | undefined,
    region: g.region as string | undefined,
  };
}

/** Swamp extension model for CloudFormation StackSet. Registered at \`@swamp/aws/cloudformation/stack_set\`. */
export const model = {
  type: "@swamp/aws/cloudformation/stack_set",
  version: "2026.01.01.1",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "CloudFormation StackSet resource state",
      schema: StateSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a CloudFormation StackSet",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const desiredState: Record<string, unknown> = {};
        for (const [key, value] of Object.entries(g)) {
          if (key === "name") continue;
          if (_credentialKeys.has(key)) continue;
          if (value !== undefined) desiredState[key] = value;
        }
        const result = await createResource("AWS::CloudFormation::StackSet", desiredState, credentials) as StateData;
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a CloudFormation StackSet",
      arguments: z.object({ identifier: z.string().describe("The primary identifier of the CloudFormation StackSet") }),
      execute: async (args: { identifier: string }, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const result = await readResource("AWS::CloudFormation::StackSet", args.identifier, credentials) as StateData;
        const instanceName = (context.globalArgs.name?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync CloudFormation StackSet state from AWS",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const identifier = existing.StackSetId?.toString();
        if (!identifier) throw new Error("No identifier found in existing state");
        try {
          const result = await readResource("AWS::CloudFormation::StackSet", identifier, credentials) as StateData;
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        } catch (error: unknown) {
          if (isResourceNotFoundError(error)) {
            const handle = await context.writeResource("state", instanceName, {
              identifier,
              status: "not_found",
              syncedAt: new Date().toISOString(),
            });
            return { dataHandles: [handle] };
          }
          throw error;
        }
      },
    },
  },
};
'
`;

snapshot[`generateAwsExtensionModel - extracted schemas and StateSchema collision 1`] = `
'// Swamp, an Automation Framework
// Copyright (C) 2026 Elder Swamp Club, Inc.
//
// This file is part of Swamp.
//
// Swamp is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License version 3
// as published by the Free Software Foundation, with the Swamp
// Extension and Definition Exception (found in the "COPYING-EXCEPTION"
// file).
//
// Swamp is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with Swamp.  If not, see <https://www.gnu.org/licenses/>.

// Auto-generated extension model for @swamp/aws/ecs/task_definition
// Do not edit manually. Re-generate with: deno task generate:aws

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for ECS TaskDefinition (AWS::ECS::TaskDefinition).
 *
 * Wraps the CloudFormation resource type as a swamp model so create,
 * get, update, delete, sync, and list can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { isResourceNotFoundError, readResource, createResource, deleteResource } from "./_lib/aws.ts";
import type { AwsCredentials } from "./_lib/aws.ts";

const StateSchema = z.object({
  Memory: z.string().optional(),
});

const GlobalArgsSchema = z.object({
  name: z.string().describe("Instance name for this resource (used as the unique identifier in the factory pattern)"),
  accessKeyId: z.string().meta({ sensitive: true }).describe("AWS access key ID; overrides AWS_ACCESS_KEY_ID environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).describe("AWS secret access key; overrides AWS_SECRET_ACCESS_KEY environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  sessionToken: z.string().meta({ sensitive: true }).describe("AWS session token for temporary credentials; overrides AWS_SESSION_TOKEN environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  region: z.string().describe("AWS region; overrides AWS_REGION / AWS_DEFAULT_REGION environment variables and ~/.aws/config profile region. Defaults to us-east-1.").optional(),
  Family: z.string().describe("The task family name"),
});

const _StateSchema = z.object({
  Family: z.string().optional(),
  TaskDefinitionArn: z.string().optional(),
}).passthrough();

type StateData = z.infer<typeof _StateSchema>;

const InputsSchema = z.object({
  name: z.string().optional(),
  accessKeyId: z.string().meta({ sensitive: true }).optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).optional(),
  sessionToken: z.string().meta({ sensitive: true }).optional(),
  region: z.string().optional(),
  Family: z.string().describe("The task family name").optional(),
});

const _credentialKeys = new Set(["accessKeyId","secretAccessKey","sessionToken","region"]);

function _buildCredentials(g: Record<string, unknown>): AwsCredentials {
  return {
    accessKeyId: g.accessKeyId as string | undefined,
    secretAccessKey: g.secretAccessKey as string | undefined,
    sessionToken: g.sessionToken as string | undefined,
    region: g.region as string | undefined,
  };
}

/** Swamp extension model for ECS TaskDefinition. Registered at \`@swamp/aws/ecs/task_definition\`. */
export const model = {
  type: "@swamp/aws/ecs/task_definition",
  version: "2026.01.01.1",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "ECS TaskDefinition resource state",
      schema: _StateSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a ECS TaskDefinition",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const desiredState: Record<string, unknown> = {};
        for (const [key, value] of Object.entries(g)) {
          if (key === "name") continue;
          if (_credentialKeys.has(key)) continue;
          if (value !== undefined) desiredState[key] = value;
        }
        const result = await createResource("AWS::ECS::TaskDefinition", desiredState, credentials) as StateData;
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a ECS TaskDefinition",
      arguments: z.object({ identifier: z.string().describe("The primary identifier of the ECS TaskDefinition") }),
      execute: async (args: { identifier: string }, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const result = await readResource("AWS::ECS::TaskDefinition", args.identifier, credentials) as StateData;
        const instanceName = (context.globalArgs.name?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: "Delete a ECS TaskDefinition",
      arguments: z.object({ identifier: z.string().describe("The primary identifier of the ECS TaskDefinition") }),
      execute: async (args: { identifier: string }, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const { existed } = await deleteResource("AWS::ECS::TaskDefinition", args.identifier, credentials);
        const instanceName = (context.globalArgs.name?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, {
          identifier: args.identifier,
          existed,
          status: existed ? "deleted" : "not_found",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync ECS TaskDefinition state from AWS",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const identifier = existing.TaskDefinitionArn?.toString();
        if (!identifier) throw new Error("No identifier found in existing state");
        try {
          const result = await readResource("AWS::ECS::TaskDefinition", identifier, credentials) as StateData;
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        } catch (error: unknown) {
          if (isResourceNotFoundError(error)) {
            const handle = await context.writeResource("state", instanceName, {
              identifier,
              status: "not_found",
              syncedAt: new Date().toISOString(),
            });
            return { dataHandles: [handle] };
          }
          throw error;
        }
      },
    },
  },
};
'
`;

snapshot[`generateAwsExtensionModel - with upgrades block 1`] = `
'// Swamp, an Automation Framework
// Copyright (C) 2026 Elder Swamp Club, Inc.
//
// This file is part of Swamp.
//
// Swamp is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License version 3
// as published by the Free Software Foundation, with the Swamp
// Extension and Definition Exception (found in the "COPYING-EXCEPTION"
// file).
//
// Swamp is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with Swamp.  If not, see <https://www.gnu.org/licenses/>.

// Auto-generated extension model for @swamp/aws/sqs/queue
// Do not edit manually. Re-generate with: deno task generate:aws

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for SQS Queue (AWS::SQS::Queue).
 *
 * Wraps the CloudFormation resource type as a swamp model so create,
 * get, update, delete, sync, and list can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { isResourceNotFoundError, readResource, createResource, updateResource, deleteResource } from "./_lib/aws.ts";
import type { AwsCredentials } from "./_lib/aws.ts";

const GlobalArgsSchema = z.object({
  name: z.string().describe("Instance name for this resource (used as the unique identifier in the factory pattern)"),
  accessKeyId: z.string().meta({ sensitive: true }).describe("AWS access key ID; overrides AWS_ACCESS_KEY_ID environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).describe("AWS secret access key; overrides AWS_SECRET_ACCESS_KEY environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  sessionToken: z.string().meta({ sensitive: true }).describe("AWS session token for temporary credentials; overrides AWS_SESSION_TOKEN environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  region: z.string().describe("AWS region; overrides AWS_REGION / AWS_DEFAULT_REGION environment variables and ~/.aws/config profile region. Defaults to us-east-1.").optional(),
  QueueName: z.string().describe("The name of the queue"),
});

const StateSchema = z.object({
  QueueName: z.string().optional(),
  QueueUrl: z.string().optional(),
}).passthrough();

type StateData = z.infer<typeof StateSchema>;

const InputsSchema = z.object({
  name: z.string().optional(),
  accessKeyId: z.string().meta({ sensitive: true }).optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).optional(),
  sessionToken: z.string().meta({ sensitive: true }).optional(),
  region: z.string().optional(),
  QueueName: z.string().describe("The name of the queue").optional(),
});

const _credentialKeys = new Set(["accessKeyId","secretAccessKey","sessionToken","region"]);

function _buildCredentials(g: Record<string, unknown>): AwsCredentials {
  return {
    accessKeyId: g.accessKeyId as string | undefined,
    secretAccessKey: g.secretAccessKey as string | undefined,
    sessionToken: g.sessionToken as string | undefined,
    region: g.region as string | undefined,
  };
}

/** Swamp extension model for SQS Queue. Registered at \`@swamp/aws/sqs/queue\`. */
export const model = {
  type: "@swamp/aws/sqs/queue",
  version: "2026.01.02.1",
  upgrades: [
    {
      toVersion: "2026.01.02.1",
      description: "Added: NewField",
      upgradeAttributes: (old: Record<string, unknown>) => old,
    },
  ],
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "SQS Queue resource state",
      schema: StateSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a SQS Queue",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const desiredState: Record<string, unknown> = {};
        for (const [key, value] of Object.entries(g)) {
          if (key === "name") continue;
          if (_credentialKeys.has(key)) continue;
          if (value !== undefined) desiredState[key] = value;
        }
        const result = await createResource("AWS::SQS::Queue", desiredState, credentials) as StateData;
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a SQS Queue",
      arguments: z.object({ identifier: z.string().describe("The primary identifier of the SQS Queue") }),
      execute: async (args: { identifier: string }, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const result = await readResource("AWS::SQS::Queue", args.identifier, credentials) as StateData;
        const instanceName = (context.globalArgs.name?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: "Update a SQS Queue",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const identifier = existing.QueueUrl?.toString();
        if (!identifier) throw new Error("No identifier found in existing state");
        const currentState = await readResource("AWS::SQS::Queue", identifier, credentials) as StateData;
        const desiredState: Record<string, unknown> = { ...currentState };
        for (const [key, value] of Object.entries(g)) {
          if (key === "name") continue;
          if (_credentialKeys.has(key)) continue;
          if (value !== undefined) desiredState[key] = value;
        }
        const result = await updateResource("AWS::SQS::Queue", identifier, currentState, desiredState, undefined, credentials);
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: "Delete a SQS Queue",
      arguments: z.object({ identifier: z.string().describe("The primary identifier of the SQS Queue") }),
      execute: async (args: { identifier: string }, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const { existed } = await deleteResource("AWS::SQS::Queue", args.identifier, credentials);
        const instanceName = (context.globalArgs.name?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, {
          identifier: args.identifier,
          existed,
          status: existed ? "deleted" : "not_found",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync SQS Queue state from AWS",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const instanceName = (g.name?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const identifier = existing.QueueUrl?.toString();
        if (!identifier) throw new Error("No identifier found in existing state");
        try {
          const result = await readResource("AWS::SQS::Queue", identifier, credentials) as StateData;
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        } catch (error: unknown) {
          if (isResourceNotFoundError(error)) {
            const handle = await context.writeResource("state", instanceName, {
              identifier,
              status: "not_found",
              syncedAt: new Date().toISOString(),
            });
            return { dataHandles: [handle] };
          }
          throw error;
        }
      },
    },
  },
};
'
`;

snapshot[`generateAwsExtensionModel - with enrichment 1`] = `
'// Swamp, an Automation Framework
// Copyright (C) 2026 Elder Swamp Club, Inc.
//
// This file is part of Swamp.
//
// Swamp is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License version 3
// as published by the Free Software Foundation, with the Swamp
// Extension and Definition Exception (found in the "COPYING-EXCEPTION"
// file).
//
// Swamp is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with Swamp.  If not, see <https://www.gnu.org/licenses/>.

// Auto-generated extension model for @swamp/aws/rds/dbcluster
// Do not edit manually. Re-generate with: deno task generate:aws

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for RDS DBCluster (AWS::RDS::DBCluster).
 *
 * Wraps the CloudFormation resource type as a swamp model so create,
 * get, update, delete, sync, and list can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from "npm:zod@4.3.6";
import { isResourceNotFoundError, readResource, createResource, updateResource, deleteResource } from "./_lib/aws.ts";
import type { AwsCredentials } from "./_lib/aws.ts";
import { DescribeDBClustersCommand, RDSClient } from "npm:@aws-sdk/client-rds@3.1127.0";

const GlobalArgsSchema = z.object({
  accessKeyId: z.string().meta({ sensitive: true }).describe("AWS access key ID; overrides AWS_ACCESS_KEY_ID environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).describe("AWS secret access key; overrides AWS_SECRET_ACCESS_KEY environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  sessionToken: z.string().meta({ sensitive: true }).describe("AWS session token for temporary credentials; overrides AWS_SESSION_TOKEN environment variable. Wire with a vault.get(...) expression to source it from a vault.").optional(),
  region: z.string().describe("AWS region; overrides AWS_REGION / AWS_DEFAULT_REGION environment variables and ~/.aws/config profile region. Defaults to us-east-1.").optional(),
  DBClusterIdentifier: z.string().describe("The DB cluster identifier"),
});

const MemberSchema = z.object({
  MemberId: z.string().optional(),
  IsWriter: z.boolean().optional(),
});

async function enrichState(state: StateData): Promise<StateData> {
  return state;
}

const StateSchema = z.object({
  DBClusterIdentifier: z.string(),
  DBClusterArn: z.string().optional(),
  Members: z.array(MemberSchema).optional(),
}).passthrough();

type StateData = z.infer<typeof StateSchema>;

const InputsSchema = z.object({
  accessKeyId: z.string().meta({ sensitive: true }).optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).optional(),
  sessionToken: z.string().meta({ sensitive: true }).optional(),
  region: z.string().optional(),
  DBClusterIdentifier: z.string().describe("The DB cluster identifier").optional(),
});

const _credentialKeys = new Set(["accessKeyId","secretAccessKey","sessionToken","region"]);

function _buildCredentials(g: Record<string, unknown>): AwsCredentials {
  return {
    accessKeyId: g.accessKeyId as string | undefined,
    secretAccessKey: g.secretAccessKey as string | undefined,
    sessionToken: g.sessionToken as string | undefined,
    region: g.region as string | undefined,
  };
}

/** Swamp extension model for RDS DBCluster. Registered at \`@swamp/aws/rds/dbcluster\`. */
export const model = {
  type: "@swamp/aws/rds/dbcluster",
  version: "2026.01.01.1",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: "RDS DBCluster resource state",
      schema: StateSchema,
      lifetime: "infinite",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: "Create a RDS DBCluster",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const desiredState: Record<string, unknown> = {};
        for (const [key, value] of Object.entries(g)) {
          if (_credentialKeys.has(key)) continue;
          if (value !== undefined) desiredState[key] = value;
        }
        const result = await createResource("AWS::RDS::DBCluster", desiredState, credentials) as StateData;
        const instanceName = ((result.DBClusterIdentifier ?? g.DBClusterIdentifier)?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: "Get a RDS DBCluster",
      arguments: z.object({ identifier: z.string().describe("The primary identifier of the RDS DBCluster") }),
      execute: async (args: { identifier: string }, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const result = await enrichState(await readResource("AWS::RDS::DBCluster", args.identifier, credentials) as StateData);
        const instanceName = ((result.DBClusterIdentifier ?? context.globalArgs.DBClusterIdentifier)?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: "Update a RDS DBCluster",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const instanceName = (g.DBClusterIdentifier?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const identifier = existing.DBClusterIdentifier?.toString();
        if (!identifier) throw new Error("No identifier found in existing state");
        const currentState = await readResource("AWS::RDS::DBCluster", identifier, credentials) as StateData;
        const desiredState: Record<string, unknown> = { ...currentState };
        for (const [key, value] of Object.entries(g)) {
          if (_credentialKeys.has(key)) continue;
          if (value !== undefined) desiredState[key] = value;
        }
        const result = await updateResource("AWS::RDS::DBCluster", identifier, currentState, desiredState, undefined, credentials);
        const handle = await context.writeResource("state", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: "Delete a RDS DBCluster",
      arguments: z.object({ identifier: z.string().describe("The primary identifier of the RDS DBCluster") }),
      execute: async (args: { identifier: string }, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const { existed } = await deleteResource("AWS::RDS::DBCluster", args.identifier, credentials);
        const instanceName = (context.globalArgs.DBClusterIdentifier?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const handle = await context.writeResource("state", instanceName, {
          identifier: args.identifier,
          existed,
          status: existed ? "deleted" : "not_found",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: "Sync RDS DBCluster state from AWS",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const instanceName = (g.DBClusterIdentifier?.toString() ?? "current").replace(/[\\\\/\\\\\\\\]/g, "_").replace(/\\\\.\\\\./g, "_").replace(/\\\\0/g, "");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error("No existing state found - run create or get first");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const identifier = existing.DBClusterIdentifier?.toString();
        if (!identifier) throw new Error("No identifier found in existing state");
        try {
          const result = await enrichState(await readResource("AWS::RDS::DBCluster", identifier, credentials) as StateData);
          const handle = await context.writeResource("state", instanceName, result);
          return { dataHandles: [handle] };
        } catch (error: unknown) {
          if (isResourceNotFoundError(error)) {
            const handle = await context.writeResource("state", instanceName, {
              identifier,
              status: "not_found",
              syncedAt: new Date().toISOString(),
            });
            return { dataHandles: [handle] };
          }
          throw error;
        }
      },
    },
  },
};
'
`;

snapshot[`generateAwsExtensionModel - with modelMethods 1`] = `
"// Swamp, an Automation Framework
// Copyright (C) 2026 Elder Swamp Club, Inc.
//
// This file is part of Swamp.
//
// Swamp is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License version 3
// as published by the Free Software Foundation, with the Swamp
// Extension and Definition Exception (found in the \\"COPYING-EXCEPTION\\"
// file).
//
// Swamp is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with Swamp.  If not, see <https://www.gnu.org/licenses/>.

// Auto-generated extension model for @swamp/aws/cloudformation/stack-set
// Do not edit manually. Re-generate with: deno task generate:aws

// deno-lint-ignore-file no-explicit-any

/**
 * Swamp extension model for CloudFormation StackSet (AWS::CloudFormation::StackSet).
 *
 * Wraps the CloudFormation resource type as a swamp model so create,
 * get, update, delete, sync, and list can be driven through \`swamp model\`.
 *
 * @module
 */

import { z } from \\"npm:zod@4.3.6\\";
import { isResourceNotFoundError, readResource, createResource, updateResource, deleteResource } from \\"./_lib/aws.ts\\";
import type { AwsCredentials } from \\"./_lib/aws.ts\\";
import { CloudFormationClient, ListStackInstancesCommand } from \\"npm:@aws-sdk/client-cloudformation@3.1127.0\\";

const GlobalArgsSchema = z.object({
  accessKeyId: z.string().meta({ sensitive: true }).describe(\\"AWS access key ID; overrides AWS_ACCESS_KEY_ID environment variable. Wire with a vault.get(...) expression to source it from a vault.\\").optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).describe(\\"AWS secret access key; overrides AWS_SECRET_ACCESS_KEY environment variable. Wire with a vault.get(...) expression to source it from a vault.\\").optional(),
  sessionToken: z.string().meta({ sensitive: true }).describe(\\"AWS session token for temporary credentials; overrides AWS_SESSION_TOKEN environment variable. Wire with a vault.get(...) expression to source it from a vault.\\").optional(),
  region: z.string().describe(\\"AWS region; overrides AWS_REGION / AWS_DEFAULT_REGION environment variables and ~/.aws/config profile region. Defaults to us-east-1.\\").optional(),
  StackSetName: z.string().describe(\\"The stack set name\\"),
});

function createCfnClient(credentials: AwsCredentials): CloudFormationClient {
  return new CloudFormationClient({ region: credentials.region ?? \\"us-east-1\\" });
}

async function listInstances(args: Record<string, unknown>, credentials: AwsCredentials): Promise<Record<string, unknown>[]> {
  return [{ Account: '111', Region: 'us-east-1' }];
}

async function describeOp(args: Record<string, unknown>, credentials: AwsCredentials): Promise<Record<string, unknown>> {
  return { OperationId: 'op-1' };
}

const StateSchema = z.object({
  StackSetName: z.string(),
  StackSetId: z.string().optional(),
}).passthrough();

type StateData = z.infer<typeof StateSchema>;

const InputsSchema = z.object({
  accessKeyId: z.string().meta({ sensitive: true }).optional(),
  secretAccessKey: z.string().meta({ sensitive: true }).optional(),
  sessionToken: z.string().meta({ sensitive: true }).optional(),
  region: z.string().optional(),
  StackSetName: z.string().describe(\\"The stack set name\\").optional(),
});

const _credentialKeys = new Set([\\"accessKeyId\\",\\"secretAccessKey\\",\\"sessionToken\\",\\"region\\"]);

function _buildCredentials(g: Record<string, unknown>): AwsCredentials {
  return {
    accessKeyId: g.accessKeyId as string | undefined,
    secretAccessKey: g.secretAccessKey as string | undefined,
    sessionToken: g.sessionToken as string | undefined,
    region: g.region as string | undefined,
  };
}

/** Swamp extension model for CloudFormation StackSet. Registered at \`@swamp/aws/cloudformation/stack-set\`. */
export const model = {
  type: \\"@swamp/aws/cloudformation/stack-set\\",
  version: \\"2026.01.01.1\\",
  globalArguments: GlobalArgsSchema,
  inputsSchema: InputsSchema,
  resources: {
    state: {
      description: \\"CloudFormation StackSet resource state\\",
      schema: StateSchema,
      lifetime: \\"infinite\\",
      garbageCollection: 10,
    },
  },
  methods: {
    create: {
      description: \\"Create a CloudFormation StackSet\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const desiredState: Record<string, unknown> = {};
        for (const [key, value] of Object.entries(g)) {
          if (_credentialKeys.has(key)) continue;
          if (value !== undefined) desiredState[key] = value;
        }
        const result = await createResource(\\"AWS::CloudFormation::StackSet\\", desiredState, credentials) as StateData;
        const instanceName = ((result.StackSetName ?? g.StackSetName)?.toString() ?? \\"current\\").replace(/[\\\\/\\\\\\\\]/g, \\"_\\").replace(/\\\\.\\\\./g, \\"_\\").replace(/\\\\0/g, \\"\\");
        const handle = await context.writeResource(\\"state\\", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    get: {
      description: \\"Get a CloudFormation StackSet\\",
      arguments: z.object({ identifier: z.string().describe(\\"The primary identifier of the CloudFormation StackSet\\") }),
      execute: async (args: { identifier: string }, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const result = await readResource(\\"AWS::CloudFormation::StackSet\\", args.identifier, credentials) as StateData;
        const instanceName = ((result.StackSetName ?? context.globalArgs.StackSetName)?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, \\"_\\").replace(/\\\\.\\\\./g, \\"_\\").replace(/\\\\0/g, \\"\\");
        const handle = await context.writeResource(\\"state\\", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    update: {
      description: \\"Update a CloudFormation StackSet\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const instanceName = (g.StackSetName?.toString() ?? \\"current\\").replace(/[\\\\/\\\\\\\\]/g, \\"_\\").replace(/\\\\.\\\\./g, \\"_\\").replace(/\\\\0/g, \\"\\");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error(\\"No existing state found - run create or get first\\");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const identifier = existing.StackSetName?.toString();
        if (!identifier) throw new Error(\\"No identifier found in existing state\\");
        const currentState = await readResource(\\"AWS::CloudFormation::StackSet\\", identifier, credentials) as StateData;
        const desiredState: Record<string, unknown> = { ...currentState };
        for (const [key, value] of Object.entries(g)) {
          if (_credentialKeys.has(key)) continue;
          if (value !== undefined) desiredState[key] = value;
        }
        const result = await updateResource(\\"AWS::CloudFormation::StackSet\\", identifier, currentState, desiredState, [\\"StackSetName\\"], credentials);
        const handle = await context.writeResource(\\"state\\", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
    delete: {
      description: \\"Delete a CloudFormation StackSet\\",
      arguments: z.object({ identifier: z.string().describe(\\"The primary identifier of the CloudFormation StackSet\\") }),
      execute: async (args: { identifier: string }, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const { existed } = await deleteResource(\\"AWS::CloudFormation::StackSet\\", args.identifier, credentials);
        const instanceName = (context.globalArgs.StackSetName?.toString() ?? args.identifier).replace(/[\\\\/\\\\\\\\]/g, \\"_\\").replace(/\\\\.\\\\./g, \\"_\\").replace(/\\\\0/g, \\"\\");
        const handle = await context.writeResource(\\"state\\", instanceName, {
          identifier: args.identifier,
          existed,
          status: existed ? \\"deleted\\" : \\"not_found\\",
          deletedAt: new Date().toISOString(),
        });
        return { dataHandles: [handle] };
      },
    },
    sync: {
      description: \\"Sync CloudFormation StackSet state from AWS\\",
      arguments: z.object({}),
      execute: async (_args: Record<string, never>, context: any) => {
        const g = context.globalArgs;
        const credentials = _buildCredentials(g);
        const instanceName = (g.StackSetName?.toString() ?? \\"current\\").replace(/[\\\\/\\\\\\\\]/g, \\"_\\").replace(/\\\\.\\\\./g, \\"_\\").replace(/\\\\0/g, \\"\\");
        const content = await context.dataRepository.getContent(
          context.modelType, context.modelId, instanceName,
        );
        if (!content) throw new Error(\\"No existing state found - run create or get first\\");
        const existing = JSON.parse(new TextDecoder().decode(content));
        const identifier = existing.StackSetName?.toString();
        if (!identifier) throw new Error(\\"No identifier found in existing state\\");
        try {
          const result = await readResource(\\"AWS::CloudFormation::StackSet\\", identifier, credentials) as StateData;
          const handle = await context.writeResource(\\"state\\", instanceName, result);
          return { dataHandles: [handle] };
        } catch (error: unknown) {
          if (isResourceNotFoundError(error)) {
            const handle = await context.writeResource(\\"state\\", instanceName, {
              identifier,
              status: \\"not_found\\",
              syncedAt: new Date().toISOString(),
            });
            return { dataHandles: [handle] };
          }
          throw error;
        }
      },
    },
    listInstances: {
      description: \\"List stack instances for this StackSet\\",
      arguments: z.object({
    maxPages: z.number().describe(\\"Max pages\\").optional(),
      }),
      execute: async (args: Record<string, unknown>, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const mergedArgs = { ...context.globalArgs, ...args };
        const items = await listInstances(mergedArgs, credentials);
        const dataHandles = [];
        for (let i = 0; i < items.length; i++) {
          const item = items[i];
          const instanceName = (String(i)).replace(/[\\\\/\\\\\\\\]/g, \\"_\\").replace(/\\\\.\\\\./g, \\"_\\").replace(/\\\\0/g, \\"\\");
          const handle = await context.writeResource(\\"state\\", instanceName, item);
          dataHandles.push(handle);
        }
        return { dataHandles, result: { count: items.length } };
      },
    },
    describeOperation: {
      description: \\"Describe a StackSet operation\\",
      arguments: z.object({
    operationId: z.string().describe(\\"The operation ID\\"),
      }),
      execute: async (args: Record<string, unknown>, context: any) => {
        const credentials = _buildCredentials(context.globalArgs);
        const mergedArgs = { ...context.globalArgs, ...args };
        const result = await describeOp(mergedArgs, credentials);
        const argKeys = Object.keys(args).filter((k) => args[k] !== undefined);
        const suffix = argKeys.length > 0 ? \\"-\\" + argKeys.map((k) => String(args[k])).join(\\"-\\") : \\"\\";
        const instanceName = (\\"describeOperation\\" + suffix).replace(/[\\\\/\\\\\\\\]/g, \\"_\\").replace(/\\\\.\\\\./g, \\"_\\").replace(/\\\\0/g, \\"\\");
        const handle = await context.writeResource(\\"state\\", instanceName, result);
        return { dataHandles: [handle] };
      },
    },
  },
};
"
`;
